# YOLO_Model_Manager

./: .gitignore  README.md  __init__.py  pyproject.toml
docs/api/filesystem/: dirs.md  dirs_managers.md  files.md
docs/api/image/: image_processing.md
docs/api/utils/: config.md  data_types.md
docs/cli/: image-adquisition.md  move-cursor.md  split-dataset.md  test-model.md  train-model.md
docs/examples/: dataset.data.yaml  dataset.metadata.yaml  example.env  model.metadata.yaml  modelTraining.data.yaml
docs/file_structures/: training.dio
yoloModelManager/: __init__.py
yoloModelManager/src/cameras/: __init__.py  camera_manager.py
yoloModelManager/src/filesystem/: __init__.py  dirs.py  dirsManagers.py  dirs_managers.py  files.py
yoloModelManager/src/image/: image_processing.py
yoloModelManager/src/model/: __init__.py  data.py  model_manager.py  result.py  results.py
yoloModelManager/src/scripts/: camera.py  dataset.py  generic.py  model.py
yoloModelManager/src/utils/: __init__.py  config.py  data_types.py
