[build-system]
    requires = ["setuptools>=61.0.0", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "jaimead7-yolo-model-manager"
    version = "0.0.1"
    description = "Utilities for training, testing and executing custom YOLO models."
    authors = [
        {name = "Jaimead7", email = "alvarez.diaz.jaime1@gmail.com"},
    ]
    maintainers = [
        {name = "Jaimead7", email = "alvarez.diaz.jaime1@gmail.com"},
    ]
    readme = {file = "README.md", content-type = "text/markdown"}
    license = "AGPL-3.0"
    license-files = [
        "LICENSE",
    ]
    keywords = [
        "training",
        "YOLO",
        "vision",
        "AI",
        "Ultralytics"
    ]
    classifiers = [
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
    requires-python = ">=3.10, <3.12"
    dependencies = [
        "click >= 8.2.1",
        "ultralytics[export] >= 8.3.179",
        "python-dotenv >= 1.1.1",
        "jaimead7-pyutils >= 0.2.0",
        "wmi >= 1.5.1; sys_platform == 'win32'",
    ]

    [project.urls]
        Homepage = "https://github.com/Jaimead7/YOLO_Model_Manager"
        Repository = "https://github.com/Jaimead7/YOLO_Model_Manager"

    [project.scripts]
        image-adquisition = "yoloModelManager.src.scripts.camera:image_adquisition"
        test-model = "yoloModelManager.src.scripts.model:test_model"
        train-model = "yoloModelManager.src.scripts.model:train_model"
        split-dataset = "yoloModelManager.src.scripts.dataset:split_dataset"

[tool]
    [tool.setuptools]
        [tool.setuptools.packages]
        find = {}
        [tool.setuptools.package-data]
            yoloModelManager = [
                "dist/config/*.toml",
                "dist/datasets/.gitignore",
                "dist/images/.gitignore",
                "dist/models/.gitignore"
            ]
